--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
     <h2>Liens</h2>
     <ul>
-        <li><a href="#">CV (PDF)</a></li>
-        <li><a href="#">Profil Kaggle</a></li>
-        <li><a href="#">Projet Data Science</a></li>
+        <li><a <a href="https://www.kaggle.com/USERNAME">
+>CV (PDF)</a></li>
+        <li><a <a href="https://www.kaggle.com/USERNAME">
+>Profil Kaggle</a></li>
+        <li><a <a href="https://www.kaggle.com/USERNAME">
+">Projet Data Science</a></li>
     </ul>
 </body>
     
