--- a/index.html
+++ b/index.html
@@ -2,24 +2,109 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio - Zakarya</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Zakarya El Kachach</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1>Zakarya el kachach</h1>
-    <p>Étudiant en Data Science & Business Intelligence</p>
+    <div class="container">
+        <header>
+            <div class="header-content">
+                <div class="profile-photo-placeholder">
+                    <i class="fa-solid fa-user-circle"></i>
+                </div>
+                <div>
+                    <h1>Zakarya El Kachach</h1>
+                    <p class="subtitle">Étudiant en Marketing Digital et Commercial</p>
+                </div>
+            </div>
+            <p class="objective">
+                Je suis à la recherche d'un stage stimulant au sein d'une agence marketing à Rabat, afin d'appliquer et de développer mes compétences en stratégie digitale, création de contenu et analyse de données.
+            </p>
+        </header>
 
-    <h2>À propos</h2>
-    <p>Passionné par l’analyse de données, le business et la data science.</p>
+        <section class="about">
+            <h2>À Propos</h2>
+            <p>
+                Étudiant en deuxième année de Marketing Digital et Commercial à l'École Supérieure de Technologie de Salé, motivé et dynamique. J'ai acquis une première expérience au sein d'Attaqadao dans les domaines des ressources humaines et de la gestion. À l'aise avec les outils digitaux, je m'intéresse particulièrement à la création de contenu, aux réseaux sociaux et au marketing digital.
+            </p>
+        </section>
 
-    <h2>Liens</h2>
-    <ul>
-        <li><a <a href="https://www.kaggle.com/USERNAME">
->CV (PDF)</a></li>
-        <li><a <a href="https://www.kaggle.com/USERNAME">
->Profil Kaggle</a></li>
-        <li><a <a href="https://www.kaggle.com/USERNAME">
-">Projet Data Science</a></li>
-    </ul>
+        <section class="experience">
+            <h2>Expérience</h2>
+            <div class="item">
+                <h3>Stagiaire - Atacadao</h3>
+                <p class="period">Maroc | 2024-2025</p>
+                <ul>
+                    <li>Participation aux activités liées à la gestion administrative et aux ressources humaines.</li>
+                    <li>Contribution au fonctionnement du service RH, au classement et au suivi des documents, ainsi qu'à l'organisation des tâches quotidiennes.</li>
+                    <li>Développement du sens de l'organisation, de l'esprit d'équipe et de la compréhension du milieu professionnel.</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="education">
+            <h2>Éducation</h2>
+            <div class="item">
+                <h3>Diplôme Universitaire de Technologie (DUT) - Marketing Digital et Commercial (En cours)</h3>
+                <p class="period">École Supérieure de Technologie de Salé (EST) | Salé | 2024-2026</p>
+            </div>
+            <div class="item">
+                <h3>Baccalauréat - Sciences Économiques (Mention Bien)</h3>
+                <p class="period">Lycée Dakhla - Ouled Berhil | Maroc | 2023-2024</p>
+            </div>
+        </section>
+
+        <section class="skills">
+            <h2>Compétences</h2>
+            <div class="skills-grid">
+                <div>
+                    <h3>Marketing</h3>
+                    <ul>
+                        <li>Marketing Commercial</li>
+                        <li>Digital Marketing</li>
+                        <li>Création de contenu digital</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Logiciels</h3>
+                    <ul>
+                        <li>Microsoft Word, Excel, PowerPoint</li>
+                        <li>Canva</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Soft Skills</h3>
+                    <ul>
+                        <li>Leadership et communication</li>
+                        <li>Travail en équipe</li>
+                        <li>Créativité</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Langues</h3>
+                    <ul>
+                        <li>Arabe (Langue maternelle)</li>
+                        <li>Français (Bon niveau)</li>
+                        <li>Anglais (Bon niveau)</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="links">
+            <h2>Liens Utiles</h2>
+            <ul>
+                <li><a href="ton_cv.pdf" download="Zakarya_El_Kachach_CV.pdf"><i class="fa-solid fa-file-pdf"></i> Télécharger mon CV (PDF)</a></li>
+                <li><a href="https://www.kaggle.com/code/zakaryaelkachach/notebook64e15c99cf/edit" target="_blank"><i class="fa-brands fa-kaggle"></i> Mon Profil Kaggle</a></li>
+            </ul>
+        </section>
+
+        <footer>
+            <p>Contact: +212-708235021 | mrzakaryaelkachach@gmail.com</p>
+        </footer>
+    </div>
 </body>
-    
 </html>
