--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 
         <footer>
             <p>Contact: +212-708235021 | mrzakaryaelkachach@gmail.com</p>
+            <p>Consultez mon profil professionnel et mes travaux sur Kaggle : 
+   <a href="https://www.kaggle.com/code/zakaryaaelkachach/analyse-exploratoire-de-mes-premi-res-donn-es" target="_blank">Mon Profil Kaggle</a>
+</p>
         </footer>
     </div>
 </body>
