--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <div class="mt-12">
                 <a href="cv.pdf" download class="btn-creative px-10 py-5 rounded-2xl font-bold text-lg flex items-center gap-3 shadow-2xl">
-                    <i class="fas fa-cloud-download-alt"></i> TÉLÉCHARGER LE CV (LATEX)
+                    <i class="fas fa-cloud-download-alt"></i> TÉLÉCHARGER LE CV (PDF)
                 </a>
             </div>
         </header>
@@ -157,11 +157,11 @@
                     </h2>
                     <div class="flex flex-wrap gap-3">
                         <span class="skill-tag px-4 py-2 rounded-xl text-sm">Marketing Digital</span>
-                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Canva Expert</span>
                         <span class="skill-tag px-4 py-2 rounded-xl text-sm">Marketing Commercial</span>
-                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Time Management</span>
-                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Data Analysis</span>
+                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Canva Expert</span>
+                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Création de contenu</span>
                         <span class="skill-tag px-4 py-2 rounded-xl text-sm">Microsoft Office</span>
+                        <span class="skill-tag px-4 py-2 rounded-xl text-sm">Time Management</span>
                     </div>
                 </div>
 
@@ -199,7 +199,7 @@
                     </div>
                     <h2 class="heading-font text-3xl font-bold mb-6">Profil</h2>
                     <p class="text-gray-300 text-lg leading-relaxed">
-                        Étudiant en 2ème année de <span class="text-indigo-400 font-bold">Marketing Digital et Commercial</span> à l'EST de Salé[cite: 7]. Motivé et dynamique, j'allie création de contenu et analyse pour transformer des insights en campagnes percutantes[cite: 9]. Je suis à la recherche d'un stage pour mettre mon expertise au service de votre agence.
+                        Étudiant en 2ème année de <span class="text-indigo-400 font-bold">Marketing Digital et Commercial</span> à l'EST de Salé. Motivé et dynamique, j'allie création de contenu et analyse pour transformer des insights en campagnes percutantes. Je suis à la recherche d'un stage pour mettre mon expertise au service de votre agence.
                     </p>
                 </div>
 
@@ -211,9 +211,9 @@
                             <div class="absolute -left-[33px] top-0 w-16 h-16 glass rounded-2xl flex items-center justify-center text-indigo-400">
                                 <i class="fas fa-university text-xl"></i>
                             </div>
-                            <span class="text-indigo-400 text-sm font-bold tracking-widest">2024 — PRÉSENT</span>
+                            <span class="text-indigo-400 text-sm font-bold tracking-widest">2024 — 2026</span>
                             <h3 class="text-xl font-bold mt-1">DUT Marketing Digital & Commercial</h3>
-                            <p class="text-gray-400">École Supérieure de Technologie de Salé (EST) [cite: 34, 35]</p>
+                            <p class="text-gray-400">École Supérieure de Technologie de Salé (EST)</p>
                         </div>
 
                         <div class="relative pl-10">
@@ -222,7 +222,7 @@
                             </div>
                             <span class="text-purple-400 text-sm font-bold tracking-widest">2024 — 2025</span>
                             <h3 class="text-xl font-bold mt-1">Stagiaire | ATACADAO</h3>
-                            <p class="text-gray-400 italic">Stage d'initiation - Gestion administrative & RH [cite: 11, 29]</p>
+                            <p class="text-gray-400 italic">Stage d'initiation - Gestion administrative & RH</p>
                         </div>
 
                         <div class="relative pl-10">
@@ -231,7 +231,7 @@
                             </div>
                             <span class="text-pink-400 text-sm font-bold tracking-widest">2023 — 2024</span>
                             <h3 class="text-xl font-bold mt-1">Baccalauréat Sciences Économiques</h3>
-                            <p class="text-gray-400">Lycée Dakhla - Ouled Berhil (Mention Bien) [cite: 37, 38]</p>
+                            <p class="text-gray-400">Lycée Dakhla - Ouled Berhil (Mention Bien)</p>
                         </div>
                     </div>
                 </div>
@@ -239,11 +239,11 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="glass p-8 rounded-3xl bg-gradient-to-br from-indigo-500/10 to-transparent">
                         <h4 class="font-bold mb-2 flex items-center gap-2"><i class="fas fa-brain text-pink-500"></i> Soft Skills</h4>
-                        <p class="text-sm text-gray-400">Leadership, Travail d'équipe, Créativité et Communication[cite: 26, 27, 28].</p>
+                        <p class="text-sm text-gray-400">Leadership, Travail d'équipe, Créativité et Communication.</p>
                     </div>
                     <div class="glass p-8 rounded-3xl bg-gradient-to-br from-purple-500/10 to-transparent">
                         <h4 class="font-bold mb-2 flex items-center gap-2"><i class="fas fa-map-marker-alt text-indigo-500"></i> Localisation</h4>
-                        <p class="text-sm text-gray-400">Basé à Salé/Rabat. Disponible pour un stage en Agence Marketing[cite: 5].</p>
+                        <p class="text-sm text-gray-400">Basé à Salé (Av. Al Qods). Disponible pour stage sur Rabat/Salé.</p>
                     </div>
                 </div>
             </div>
