--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="max-w-6xl mx-auto">
         <header class="flex flex-col items-center text-center mb-16">
             <div class="photo-wrapper mb-8">
-                <img src="profile.jpg" alt="Zakarya El Kachach" class="photo-circle" onerror="this.src='https://ui-avatars.com/api/?name=Zakarya+El+Kachach&background=6366f1&color=fff&size=200'">
+                <img src="profile" alt="Zakarya El Kachach" class="photo-circle" onerror="this.src='https://ui-avatars.com/api/?name=Zakarya+El+Kachach&background=6366f1&color=fff&size=200'">
             </div>
             
             <h1 class="heading-font text-5xl md:text-7xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-indigo-400 via-purple-400 to-pink-400">
