--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
 
             <div class="mt-12">
-                <a href="cv.pdf" download class="btn-creative px-10 py-5 rounded-2xl font-bold text-lg flex items-center gap-3 shadow-2xl">
+                <a href="CV_zakarya_el_kachach_.pdf" download class="btn-creative px-10 py-5 rounded-2xl font-bold text-lg flex items-center gap-3 shadow-2xl">
                     <i class="fas fa-cloud-download-alt"></i> TÉLÉCHARGER LE CV (PDF)
                 </a>
             </div>
