--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <section class="p-8 md:p-12 rounded-[2.5rem] bg-gradient-to-br from-indigo-900/40 to-black border border-indigo-500/20 text-center space-y-8">
                 <h2 class="font-syne text-3xl font-bold text-white text-gradient">Besoin d'un stagiaire dynamique ?</h2>
-                <a href="CV_zakarya_el_kachach_.pdf" download class="inline-flex items-center gap-3 bg-indigo-600 text-white px-10 py-5 rounded-full font-extrabold hover:bg-white hover:text-black transition-all">
+                <a href="CV.pdf" download class="inline-flex items-center gap-3 bg-indigo-600 text-white px-10 py-5 rounded-full font-extrabold hover:bg-white hover:text-black transition-all">
                     TÉLÉCHARGER LE CV <i class="fas fa-file-download"></i>
                 </a>
             </section>
