--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             </section>
 
             <section class="p-8 md:p-12 rounded-[2.5rem] bg-gradient-to-br from-indigo-900/40 to-black border border-indigo-500/20 text-center space-y-8">
-                <h2 class="font-syne text-3xl font-bold text-white text-gradient">Besoin d'un stagiaire dynamique ?</h2>
-                <a href="cv-zakarya.pdf" download="CV_Zakarya.pdf" class="inline-flex items-center gap-3 bg-indigo-600 text-white px-10 py-5 rounded-full font-extrabold hover:bg-white hover:text-black transition-all">
+                <h2 class="font-syne text-3xl font-bold text-white">Besoin d'un stagiaire dynamique ?</h2>
+                <a href="CV_Zakarya.pdf" download="CV_Zakarya_El_Kachach.pdf" class="inline-flex items-center gap-3 bg-indigo-600 text-white px-10 py-5 rounded-full font-extrabold hover:bg-white hover:text-black transition-all transform hover:scale-105">
                     TÉLÉCHARGER LE CV <i class="fas fa-file-download"></i>
                 </a>
             </section>
